crates/monochange_cli/tests/snapshots/cli_clap_help__clap_long_help__monochange_lint.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: "render_help_snapshot(&path, version)"
---
Version: [current]
Command: monochange lint

Inspect and scaffold manifest lint rules

[1m[97mUsage:[0m [93mmonochange lint[0m [95m[OPTIONS][0m [95m<COMMAND>[0m

[1m[96mCommands:[0m
  [93mlist[0m     List registered lint rules and presets
  [93mexplain[0m  Explain a lint rule or preset
  [93mnew[0m      Scaffold a new lint rule in an ecosystem crate

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress stdout/stderr output and run in dry-run mode when supported

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter JSON output with a jq-style expression, such as `.assets[].name`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
