crates/monochange_cli/tests/snapshots/cli_clap_help__clap_long_help__monochange_run_change.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: "render_help_snapshot(&path, version)"
---
Version: [current]
Command: monochange run change

Create a change file for one or more packages

[1m[97mUsage:[0m monochange run change [--dry-run] [--interactive] --package <PACKAGE> [--bump <BUMP>] --reason <REASON> [--version <VERSION>] [--type <TYPE>] [--caused-by <CAUSED_BY>] [--details <DETAILS>] [--output <PATH>]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--interactive[0m
          

      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          

      [93m--bump[0m[95m [0m[95m<BUMP>[0m
          [default: patch]
          [possible values: none, patch, minor, major]

      [93m--reason[0m[95m [0m[95m<REASON>[0m
          

      [93m--version[0m[95m [0m[95m<VERSION>[0m
          

      [93m--type[0m[95m [0m[95m<TYPE>[0m
          

      [93m--caused-by[0m[95m [0m[95m<CAUSED_BY>[0m
          

      [93m--details[0m[95m [0m[95m<DETAILS>[0m
          

      [93m--output[0m[95m [0m[95m<PATH>[0m
          

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress stdout/stderr output and run in dry-run mode when supported

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter JSON output with a jq-style expression, such as `.assets[].name`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange run change --package sdk-core --bump patch --reason "fix panic"
  monochange run change --package sdk-core --bump minor --reason "add API" --output .changeset/sdk-core.md
  monochange run change --package sdk --bump minor --reason "coordinated release"
  monochange run change --package sdk-config --bump none --caused-by sdk-core --reason "dependency-only follow-up"

Rules:
  - Prefer configured package ids in change files whenever a leaf package changed.
  - Use a group id only when the change is intentionally owned by the whole group.
  - Dependents and grouped members are propagated automatically during planning.
  - Use `--caused-by` when a package is only changing because another package or group moved first.
  - Legacy manifest paths may still resolve during migration, but declared ids are the stable interface.
