crates/monochange_cli/tests/snapshots/cli_clap_help__clap_long_help__monochange_skill.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: "render_help_snapshot(&path, version)"
---
Version: [current]
Command: monochange skill

Install the monochange skill bundle into the current project with the skills CLI

[1m[97mUsage:[0m [93mmonochange skill[0m [95m[OPTIONS][0m [95m[args]...[0m

[1m[96mArguments:[0m
  [95m[args]...[0m
          Arguments forwarded to `skills add` after the monochange skill source

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress stdout/stderr output and run in dry-run mode when supported

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter JSON output with a jq-style expression, such as `.assets[].name`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange help skill
  monochange skill
  monochange skill --list
  monochange skill -a claude-code -a codex
  monochange skill --skill monochange --copy -y
  monochange skill -g -a pi -y

This command forwards all remaining arguments to:
  skills add <monochange-source>

Common forwarded flags from the upstream `skills add` command include:
  -g, --global            install to the user-level agent directories
  -a, --agent <AGENT>     target specific agent harnesses
  -s, --skill <SKILL>     install specific skills from the source
  -l, --list              list the available skills without installing
      --copy              copy files instead of symlinking
  -y, --yes               skip confirmation prompts
      --all               install all skills to all supported agents

Runner selection is automatic. monochange prefers:
  1. npx
  2. pnpm dlx
  3. bunx
