crates/monochange_cli/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_placeholder_publish.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: "render_help_snapshot(&path, version)"
---
Version: [current]
Command: monochange step placeholder-publish

Run the built-in placeholder-publish release workflow step

[1m[97mUsage:[0m monochange step placeholder-publish [--dry-run] [--format <FORMAT>] [--package <PACKAGE>] [--show-all] [--otp <OTP>]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          [possible values: text, json, md]

      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          

      [93m--show-all[0m
          

      [93m--otp[0m[95m [0m[95m<OTP>[0m
          

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress stdout/stderr output and run in dry-run mode when supported

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter JSON output with a jq-style expression, such as `.assets[].name`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
