crates/monochange_cli/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_tag_release.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: "render_help_snapshot(&path, version)"
---
Version: [current]
Command: monochange step tag-release

Create and push release tags from a release record

[1m[97mUsage:[0m monochange step tag-release [--dry-run] [--from <FROM>] [--format <FORMAT>] [--push]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--from[0m[95m [0m[95m<FROM>[0m
          

      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          [possible values: text, json, md]

      [93m--push[0m[95m[=[0m[95m<PUSH>[0m[95m][0m
          [default: true]
          [possible values: true, false]

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress stdout/stderr output and run in dry-run mode when supported

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter JSON output with a jq-style expression, such as `.assets[].name`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange step tag-release --from HEAD
  monochange step tag-release --from HEAD --dry-run --format json
  monochange step tag-release --from HEAD --push=false

Tagging notes:
  - Requires the resolved ref itself to be the monochange release commit.
  - Creates the full tag set declared by that release record.
  - Treats reruns on the same commit as already up to date.
  - Use `monochange repair-release` if you need to move existing tags later.
